# se-toolkit-lab-9

deadline-optimizer_final/: DEMO_SCRIPT.md  task3-report.md  version-plan.md
deadline-optimizer_final/backend/: pyproject.toml
deadline-optimizer_final/backend/app/: main.py
deadline-optimizer_final/backend/app/routers/: __init__.py  analytics.py
deadline-optimizer_final/backend/tests/unit/: test_priority.py
deadline-optimizer_final/client-web-react/: Caddyfile  Dockerfile  package.json
deadline-optimizer_final/client-web-react/src/: Dashboard.tsx
deadline-optimizer_final/mcp/: pyproject.toml
deadline-optimizer_final/mcp/deadline_mcp/: __main__.py
deadline-optimizer_final/otel-collector/: config.yaml
deadline-optimizer_final_version/: presentation.html  pyproject.toml
deadline-optimizer_final_version/backend/app/: schemas.py
deadline-optimizer_final_version/backend/tests/e2e/: test_api.py
deadline-optimizer_final_version/client-web-react/: .env.example  index.html
deadline-optimizer_final_version/mcp/deadline_mcp/: server.py
deadline-optimizer_final_version/nanobot/: README.md  pyproject.toml
deadline-optimizer_first/: .env.docker.example  README.md  docker-compose.yml  presentation.tex
deadline-optimizer_first/backend/: Dockerfile
deadline-optimizer_first/backend/app/models/: __init__.py
deadline-optimizer_first/backend/app/routers/: courses.py
deadline-optimizer_first/caddy/: Caddyfile
deadline-optimizer_first/client-web-react/: .gitignore  package-lock.json
deadline-optimizer_first/client-web-react/src/: App.css  App.tsx
deadline-optimizer_first/nanobot/: Dockerfile  entrypoint.py
deadline-optimizer_v1/: .dockerignore  .gitignore  LICENSE  README.md  presentation.tex
deadline-optimizer_v1/backend/app/: auth.py  database.py  run.py  settings.py
deadline-optimizer_v1/backend/app/data/: init.sql
deadline-optimizer_v1/backend/app/routers/: assignments.py  deadlines.py
deadline-optimizer_v1/client-web-react/: .dockerignore  package.json
deadline-optimizer_v1/nanobot/: config.json
